Pictures and roster

--- a/MJHSoccer/Code/styles.css
+++ b/MJHSoccer/Code/styles.css
@@ -469,7 +469,7 @@ table td#Loss {
   color: #002366;
 }
 
-/* Previous Roster Styles */
+/* Roster Styles */
 
 .heading1left {
   font-size: 30px;
@@ -488,4 +488,23 @@ table td#Loss {
 
 .GoaliesRow {
   margin-left: 20px;
+}
+
+/* Picture Styles */
+
+.PicturesCol {
+  margin: 10px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.AllImages {
+  color: red;
+  text-align: center;
+  font-weight: bold;
+  text-transform: lowercase;
+  border: 1px solid navy;
+  margin: 10px;
+  padding-top: 200px;
+  padding-bottom: 10px;
 }
