--- a/MJHSoccer/Code/styles.css
+++ b/MJHSoccer/Code/styles.css
@@ -465,10 +465,14 @@ table td#Loss {
 }
 
 .linksTeam {
-  height: s5px;
   border-bottom: 1px solid transparent transition: border-bottom;
   color: red;
   margin-top: 20px;
+  background-color: #002366;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  border: 5px solid red;
+  padding: 10px;
 }
 
 .linksTeam a {
@@ -516,8 +520,67 @@ table td#Loss {
   text-align: center;
   font-weight: bold;
   text-transform: lowercase;
-  border: 1px solid navy;
+  border: 1px solid #002366;
   margin: 10px;
   padding-top: 200px;
   padding-bottom: 10px;
+}
+
+/* ALUMNI OF WEEK STYLES */
+
+.AlumOfWeek {
+  color: white;
+}
+
+.contentAlumni {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin: 20px;
+}
+
+.overviewAlum {
+  border: 5px solid red;
+  background-color: #002366;
+  padding: 20px;
+  margin-top: 20px;
+}
+
+.AlumOfWeekPic {
+  text-align: center;
+  padding: 50px;
+  border: 3px solid red;
+  margin-left: 740px;
+  margin-right: 740px;
+  margin-top: 20px;
+}
+
+.alumWeekName {
+  text-align: center;
+}
+
+.alumWeekBio {
+  text-align: left;
+  padding-top: 20px;
+}
+
+.alumWeekCollege {
+  border: 5px solid red;
+  background-color: #002366;
+  padding: 20px;
+  margin-left: -20px;
+}
+
+.alumWeekDesc {
+  border: 5px solid red;
+  background-color: #002366;
+  padding: 20px;
+  margin-left: 20px;
+  margin-right: -20px;
+}
+
+/* GRADUATING ALUMNI STYLES */
+
+td#alumniGrad {
+  background-color: red;
+  color: #002366;
 }
