--- a/MJHSoccer/Code/styles.css
+++ b/MJHSoccer/Code/styles.css
@@ -299,6 +299,58 @@ ul {
 
 /* ABOUT STYLES */
 
+.about-content {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.abtoverview {
+  background-color: #002366;
+  border: 5px solid red;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-right: 10px;
+}
+
+.AbtSchool {
+  background-color: #002366;
+  border: 5px solid red;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-left: 10px;
+}
+
+.AbtSchoolTitle {
+  font-size: 20px;
+  color: white;
+  padding: 20px;
+  text-align: center;
+}
+
+.AbtSchoolText {
+  font-size: 20px;
+  color: white;
+  padding: 20px;
+}
+
+.AbtCoachesText {
+  font-size: 20px;
+  color: white;
+  padding: 20px;
+  text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.abtCoachesImg {
+  border: 3px solid red;
+  margin: 20px;
+  margin-left: 50px;
+  margin-right: 50px;
+  text-align: center;
+  padding: 100px;
+}
+
 table td#about {
   background-color: red;
   color: #002366;
